# mewins_node_pack

./: README.md  __init__.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md
src/mewins_node_pack/: float_operation.py  float_to_int.py  int_operation.py  int_to_float.py  nodes.py  simple_expression.py
tests/: __init__.py  test_mewins_node_pack.py
