[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mewins_node_pack"
version = "0.0.1"
description = "A collection of custom nodes for ComfyUI"
authors = [
  {name = "Edwin Fuentes", email = "efuentesamin@gmail.com"}
]
readme = "README.md"
license = {text = "GNU General Public License v3"}
requires-python = ">=3.12"
classifiers = []
dependencies = [

]


[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "ruff>=0.14.7",
]
test = [
    "pytest>=9.0.1",
    "respx>=0.21.1",
    "pytest-asyncio>=0.23.5",
]


[project.urls]
Repository = "https://github.com/efuentesamin/mewins_node_pack"
BugTracker = "https://github.com/efuentesamin/mewins_node_pack/issues"
Documentation = "https://github.com/efuentesamin/mewins_node_pack/wiki"


[tool.comfy]
PublisherId = "efuentesamin"
DisplayName = "Mewins Node Pack"
Icon = ""
Tags = []
Repository = "https://github.com/efuentesamin/mewins_node_pack"

includes = []

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py312"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102",  # exec-builtin
    "S307",  # eval-used
    "W293",
    "F",  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
